--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         placeholder="Tuliskan Suara Mu Disini!"
       ></textarea>
       <!-- Bagian Tombol Kirim -->
-      <button onclick="sendMail"
+      <button onclick="sendMail()"
         class="mt-4 w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 focus:outline-none relative z-10"
       >
         Kirim
